Update link position

--- a/libs/masterpage/src/lib/masterpage/masterpage.component.scss
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.scss
@@ -19,10 +19,9 @@ footer {
     position: absolute;
     top: 0.5rem;
     right: 1rem;
+    cursor: pointer;
   }
   .linky2 {
-    position: absolute;
-    top: 0.5rem;
     right: 0.25rem;
   }
   @media (min-width: 768px) {
