--- a/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.scss
+++ b/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.scss
@@ -12,4 +12,16 @@
     justify-content: space-between;
     align-items: center;
   }
+  .title-workedon {
+    line-height: 14px;
+  }
+  .title-icon {
+    font-size: 22px;
+    margin-right: 0.5rem;
+    position: relative;
+    top: 2px;
+  }
+  .title-sub {
+    font-size: 10px;
+  }
 }
