--- a/libs/forms/src/lib/components/form-generator/form-generator.component.scss
+++ b/libs/forms/src/lib/components/form-generator/form-generator.component.scss
@@ -22,6 +22,13 @@ $verticalSpacing: 1.5rem;
     }
   }
 
+  input:disabled,
+  textarea:disabled,
+  .p-disabled,
+  .p-disabled * {
+    cursor: not-allowed !important;
+  }
+
   .text-right {
     text-align: right;
   }
