--- a/libs/brand/src/styles/omf/custom/_buttons.scss
+++ b/libs/brand/src/styles/omf/custom/_buttons.scss
@@ -10,6 +10,7 @@
   .p-splitbutton-defaultbutton {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
   }
   .p-splitbutton-menubutton {
     border-top-left-radius: 0;
