Add edit functionality to non credit

--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -182,6 +182,7 @@
               [creditProducts]="product.creditProducts"
               [nonCreditProducts]="product.nonCreditProducts"
               [colLength]="columns.length + 1"
+              (modalOpen)="modalOpen.emit($event)"
             ></app-sub-products-grid>
 
             <div class="text-end">
