--- a/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.html
+++ b/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.html
@@ -13,7 +13,7 @@
     <lib-icons icon="exclamation-triangle" class="red title-icon"></lib-icons>
     <div class="title-workedon">
       <div class="title-sub">Being worked on by:</div>
-      <div><a href="tel:3237132232">Adrianne Williams</a></div>
+      <div><a href="tel:+1234567890">Adrianne Williams</a></div>
     </div>
   </div>
 </div>
