Update subproducts to input signals

--- a/apps/loan/loan-products/src/app/components/sub-products-grid/sub-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/sub-products-grid/sub-products-grid.component.html
@@ -1,5 +1,5 @@
-@if(products.length) {
-<p-table [value]="products" dataKey="id" styleClass="mb-3">
+@if(products().length) {
+<p-table [value]="products()" dataKey="id" styleClass="mb-3">
   <ng-template pTemplate="header">
     <tr>
       <th pSortableColumn="type">Product</th>
