--- a/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
@@ -62,6 +62,7 @@
             <p-checkbox
               [binary]="true"
               [label]="creditor.value.label"
+              [disabled]="isLocked()"
               (onChange)="onSelectCreditor(i)"
             ></p-checkbox>
             <div class="sub-text">
@@ -86,7 +87,7 @@
           <p>No creditors listed.</p>
           }
         </div>
-        @if(state?.isCentral) {
+        @if(state()?.isCentral) {
         <div class="additional-info">
           <p class="mb-0"><small>Additional Info</small></p>
           <table class="table table-sm table-striped mb-0">
@@ -113,7 +114,8 @@
       </div>
       <div class="col col-12 col-md-5 mb-3">
         <lib-form-generator
-          [formModel]="loanProductsModel"
+          [formModel]="loanProductsModel()"
+          [disabled]="isLocked()"
           [formGroup]="loanProductsForm"
           [options]="formOptions"
           [disableSubmit]="false"
