--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -1,9 +1,9 @@
 <div id="loan-products-grid">
   <p-table
     dataKey="id"
-    [value]="loanProducts ?? []"
+    [value]="loanProducts() ?? []"
     [tableStyle]="{ 'min-width': '50rem' }"
-    [expandedRowKeys]="expandedRows"
+    [expandedRowKeys]="expandedRows()"
     (onRowExpand)="onRowExpand($event)"
     (onRowCollapse)="onRowCollapse($event)"
   >
@@ -146,7 +146,7 @@
             label="Info"
             appendTo="body"
             icon="pi pi-info-circle"
-            [model]="actions[rowIndex]"
+            [model]="actions()[rowIndex]"
             (onClick)="op.toggle($event)"
           ></p-splitButton>
           <p-overlayPanel #op>
@@ -179,11 +179,14 @@
         <td [attr.colspan]="columns.length + 1">
           <div class="p-3">
             <app-sub-products-grid
-              [products]="product.subProducts"
+              [creditProducts]="product.creditProducts"
+              [nonCreditProducts]="product.nonCreditProducts"
               [colLength]="columns.length + 1"
+              (modalOpen)="modalOpen.emit($event)"
             ></app-sub-products-grid>
 
             <div class="text-end">
+              <!--
               <p-button
                 class="me-2"
                 (click)="
@@ -193,7 +196,7 @@
                   })
                 "
                 >Add Credit Product</p-button
-              >
+              >-->
               <p-button
                 (click)="
                   modalOpen.emit({
