--- a/libs/masterpage/src/lib/masterpage/masterpage.component.scss
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.scss
@@ -13,6 +13,16 @@ footer {
   padding: 1rem;
   .left-col {
     display: none;
+    position: relative;
+  }
+  .linky {
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    cursor: pointer;
+  }
+  .linky2 {
+    right: 0.25rem;
   }
   @media (min-width: 768px) {
     padding: 0rem;
