--- a/libs/forms/src/lib/components/form-fields/radio/radio.component.html
+++ b/libs/forms/src/lib/components/form-fields/radio/radio.component.html
@@ -4,7 +4,7 @@
     [placeholder]="placeholder"
     [prefix]="prefix"
     [suffix]="suffix"
-    [hint]="hint"
+    [hint]="hint()"
     [control]="formControl"
     [automationId]="automationId"
     [validators]="validators"
