--- a/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
+++ b/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
@@ -10,7 +10,7 @@
     [placeholder]="placeholder"
     [prefix]="prefix"
     [suffix]="suffix"
-    [hint]="hint"
+    [hint]="hint()"
     [automationId]="automationId"
     [control]="formControl"
     [validators]="validators"
