Update nested libs to signals

--- a/libs/forms/src/lib/components/checkbox/checkbox.component.html
+++ b/libs/forms/src/lib/components/checkbox/checkbox.component.html
@@ -1,1 +1,6 @@
-<p-checkbox (onChange)="onSelect($event)" [(ngModel)]="value" [binary]="binary" [label]="label"></p-checkbox>
+<p-checkbox
+  (onChange)="onSelect($event)"
+  [(ngModel)]="value"
+  [binary]="binary"
+  [label]="label"
+></p-checkbox>
