--- a/libs/forms/src/lib/components/form-fields/dropdown/dropdown.component.html
+++ b/libs/forms/src/lib/components/form-fields/dropdown/dropdown.component.html
@@ -1,9 +1,9 @@
 <div class="dropdown">
   <lib-input
-    [label]="label"
+    [label]="label()"
     [placeholder]="placeholder"
-    [prefix]="prefix"
-    [suffix]="suffix"
+    [prefix]="prefix()"
+    [suffix]="suffix()"
     [hint]="hint()"
     [control]="formControl"
     [automationId]="automationId"
