--- a/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
+++ b/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
@@ -6,10 +6,10 @@
   }"
 >
   <lib-input
-    [label]="label"
+    [label]="label()"
     [placeholder]="placeholder"
-    [prefix]="prefix"
-    [suffix]="suffix"
+    [prefix]="prefix()"
+    [suffix]="suffix()"
     [hint]="hint()"
     [automationId]="automationId"
     [control]="formControl"
