--- a/libs/forms/src/lib/components/form-fields/password/password.component.html
+++ b/libs/forms/src/lib/components/form-fields/password/password.component.html
@@ -1,10 +1,10 @@
 <div class="input-text">
   <lib-input
-    [label]="label"
+    [label]="label()"
     [placeholder]="placeholder"
-    [prefix]="prefix"
-    [suffix]="suffix"
-    [hint]="hint"
+    [prefix]="prefix()"
+    [suffix]="suffix()"
+    [hint]="hint()"
     [automationId]="automationId"
     [control]="formControl"
     [validators]="validators"
