--- a/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
@@ -86,6 +86,15 @@
           } @else {
           <p>No creditors listed.</p>
           }
+          <hr />
+          <div class="d-flex justify-content-between">
+            <h2>Total Payoff:</h2>
+            <h2>
+              {{
+                payoffsTotal$ | async | currency : 'USD' : 'symbol' : '1.0-0'
+              }}
+            </h2>
+          </div>
         </div>
         @if(state()?.isCentral) {
         <div class="additional-info">
