--- a/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
@@ -35,10 +35,10 @@
                       | currency : 'USD' : 'symbol' : '1.0-0'
                   }}
                 </div>
-                <div *ngIf="asset.value.totalOwed">
-                  <strong>Owed:</strong>
+                <div>
+                  <strong>Equity:</strong>
                   {{
-                    asset.value.totalOwed
+                    asset.value.assetValue / 2
                       | currency : 'USD' : 'symbol' : '1.0-0'
                   }}
                 </div>
@@ -67,20 +67,22 @@
             ></p-checkbox>
             <div class="sub-text">
               <div>
-                <strong>Owed:</strong>
+                <strong>Balance:</strong>
                 {{
                   creditor.value.totalOwed
                     | currency : 'USD' : 'symbol' : '1.0-0'
                 }}
               </div>
               <div>
-                <strong>Monthly:</strong>
+                <strong>Payment:</strong>
                 {{
                   creditor.value.monthlyPayment
                     | currency : 'USD' : 'symbol' : '1.0-0'
                 }}
               </div>
+              <!--
               <div><strong>APR:</strong> {{ creditor.value.apr }}%</div>
+              -->
             </div>
           </div>
           } @else {
