--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.scss
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.scss
@@ -21,4 +21,10 @@
       padding: 0 0.5rem;
     }
   }
+  // Disable input switch animation to prevent a FOUC when the data is changed
+  .p-inputswitch-slider,
+  .p-inputswitch .p-inputswitch-slider,
+  .p-inputswitch .p-inputswitch-slider::before {
+    transition: none !important;
+  }
 }
