--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -36,7 +36,11 @@
       let-expanded="expanded"
       let-rowIndex="rowIndex"
     >
-      <tr>
+      <tr
+        [ngClass]="{
+          'row-selected': quoteSelected() === rowIndex
+        }"
+      >
         <td>
           <p-button
             type="button"
@@ -73,7 +77,7 @@
           @if(monthlyPaymentRange()[rowIndex]) { -
           {{
             product.monthlyPayment + monthlyPaymentRange()[rowIndex]
-              | currency : 'USD' : 'symbol' : '1.0-2'
+              | currency : 'USD' : 'symbol' : '1.2-2'
           }}
           }
         </td>
@@ -143,34 +147,14 @@
         </td>
         <td class="text-end">
           <p-splitButton
-            label="Info"
+            [label]="quoteSelected() === rowIndex ? 'Select' : 'Select'"
             appendTo="body"
-            icon="pi pi-info-circle"
+            [icon]="
+              quoteSelected() === rowIndex ? 'pi pi-check-square' : 'pi pi-stop'
+            "
             [model]="actions()[rowIndex]"
-            (onClick)="op.toggle($event)"
+            (onClick)="quoteSelect(rowIndex)"
           ></p-splitButton>
-          <p-overlayPanel #op>
-            <div class="p-2">
-              <table class="table table-sm table-striped mb-0">
-                <tbody>
-                  <tr>
-                    <td><strong>System Decision</strong></td>
-                    <td>$18,500</td>
-                  </tr>
-                  <!--
-                  <tr>
-                    <td><strong>PTI</strong></td>
-                    <td>36%</td>
-                  </tr>
-                  <tr>
-                    <td><strong>LTV</strong></td>
-                    <td>120</td>
-                  </tr>
-                  -->
-                </tbody>
-              </table>
-            </div>
-          </p-overlayPanel>
         </td>
       </tr>
     </ng-template>
@@ -178,12 +162,13 @@
       <tr>
         <td [attr.colspan]="columns.length + 1">
           <div class="p-3">
-            <app-sub-products-grid
+            <app-optional-products-grid
+              [parentId]="product.id"
               [creditProducts]="product.creditProducts"
               [nonCreditProducts]="product.nonCreditProducts"
               [colLength]="columns.length + 1"
               (modalOpen)="modalOpen.emit($event)"
-            ></app-sub-products-grid>
+            ></app-optional-products-grid>
 
             <div class="text-end">
               <!--
