Finalize wireup of assets

--- a/apps/loan/assets/src/app/assets.component.html
+++ b/apps/loan/assets/src/app/assets.component.html
@@ -1,1 +1,7 @@
-Hello World
+<lib-masterpage [fullWidth]="true">
+  <h1>
+    <lib-icons icon="car"></lib-icons>
+    Assets
+  </h1>
+  Hello World
+</lib-masterpage>
