Add new title component, update masterpage, update existing pages

--- a/apps/loan/assets/src/app/assets.component.html
+++ b/apps/loan/assets/src/app/assets.component.html
@@ -1,7 +1,9 @@
 <lib-masterpage [fullWidth]="true">
-  <h1>
-    <lib-icons icon="car"></lib-icons>
-    Assets
-  </h1>
-  Hello World
+  <p-card>
+    <h1>
+      <lib-icons icon="car"></lib-icons>
+      Assets (0)
+    </h1>
+    Hello World
+  </p-card>
 </lib-masterpage>
