--- a/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.html
+++ b/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.html
@@ -1,6 +1,5 @@
 <div class="title-bar">
-  <div class="d-flex">
-    <div class="title">{{ title$ | async }}</div>
+  <div class="d-flex me-3">
     <div class="align ms-3">
       Is Central: <p-inputSwitch (onChange)="isCentral($event)" class="ms-2" />
     </div>
