Initial assets form stub

--- a/apps/loan/assets/src/app/assets.component.html
+++ b/apps/loan/assets/src/app/assets.component.html
@@ -1,9 +1,13 @@
 <lib-masterpage [fullWidth]="true">
-  <p-card>
+  <p-card styleClass="mb-3">
     <h1>
       <lib-icons icon="car"></lib-icons>
       Assets (0)
     </h1>
-    Hello World
+    <p-table></p-table>>
+  </p-card>
+  <p-card>
+    <h2>Assets Builder</h2>
+    <app-assets-form></app-assets-form>
   </p-card>
 </lib-masterpage>
