Add assets table

--- a/apps/loan/assets/src/app/assets.component.html
+++ b/apps/loan/assets/src/app/assets.component.html
@@ -4,7 +4,7 @@
       <lib-icons icon="car"></lib-icons>
       Assets (0)
     </h1>
-    <p-table></p-table>>
+    <app-assets-table></app-assets-table>
   </p-card>
   <p-card>
     <h2>Assets Builder</h2>
